Adding examples and tidying up

--- a/tox.ini
+++ b/tox.ini
@@ -40,6 +40,14 @@ deps = -r{toxinidir}/requirements.txt
 commands = sphinx-build -M html . ./build
 
 
+[testenv:rst]
+basepython = python3.6
+changedir={toxinidir}/doc-source
+deps = -r{toxinidir}/requirements.txt
+       -r{toxinidir}/doc-source/requirements.txt
+commands = sphinx-build -M rst . ./build/rst
+
+
 [testenv:bumpversion]
 skip_install = true
 deps = bump2version
