Updated configuration files

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,3 +1,4 @@
+
 [settings]
 line_length=115
 force_to_top=True
@@ -10,10 +11,15 @@ import_heading_localfolder=this package
 balanced_wrapping=False
 lines_between_types=0
 use_parentheses=True
-default_section=LOCALFOLDER
+default_section=THIRDPARTY
 ;no_lines_before=LOCALFOLDER
 known_third_party=
+    github
+    requests
+    dulwich
     extras_require
+    numpy
+    pygments
     sphinx
     sphinx-notfound-page
     sphinx-prompt
@@ -22,9 +28,6 @@ known_third_party=
     sphinx_rtd_theme
     sphinxcontrib-httpdomain
     sphinxemoji
-	wx
-	PIL
-	magic
-	cairosvg
+    wordcloud
 known_first_party=
-	wordle
+    wordle
