--- a/.travis.yml
+++ b/.travis.yml
@@ -36,7 +36,7 @@ jobs:
         provider: pypi
         user: "DomDF"
         password:
-          secure: None
+          secure:
         distributions: "sdist bdist_wheel"
         skip_existing: true
 
