--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -3,8 +3,6 @@ current_version = 0.1.0
 commit = True
 tag = True
 
-[bumpversion:file:git_helper.yml]
-
 [bumpversion:file:__pkginfo__.py]
 
 [bumpversion:file:README.rst]
@@ -13,3 +11,4 @@ tag = True
 
 [bumpversion:file:wordle/__init__.py]
 
+[bumpversion:file:repo_helper.yml]
