--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,24 +1,17 @@
 
 [settings]
-line_length=115
-force_to_top=True
-indent=Tab
-multi_line_output=3
-import_heading_stdlib=stdlib
-import_heading_thirdparty=3rd party
-import_heading_firstparty=this package
-import_heading_localfolder=this package
-balanced_wrapping=False
-lines_between_types=0
-use_parentheses=True
-default_section=THIRDPARTY
+line_length = 115
+force_to_top = True
+indent = Tab
+multi_line_output = 3
+import_heading_stdlib = stdlib
+import_heading_thirdparty = 3rd party
+import_heading_firstparty = this package
+import_heading_localfolder = this package
+balanced_wrapping = False
+lines_between_types = 0
+use_parentheses = True
+default_section = THIRDPARTY
 ;no_lines_before=LOCALFOLDER
-known_third_party=
-    github
-    requests
-    dulwich
-    numpy
-    pygments
-    wordcloud
-known_first_party=
-    wordle
+known_third_party = dulwich, github, numpy, pygments, requests, wordcloud
+known_first_party = wordle
