--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,4 +3,4 @@ include LICENSE
 include requirements.txt
 recursive-exclude **/__pycache__ *
 recursive-include wordle/ *.pyi
-recursive-include wordle/ py.typed
+include wordle/py.typed
