--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@
 envlist = py36, py37, py38, mypy, build
 skip_missing_interpreters = true
 requires = pip >= 19.0.0
+isolated_build = true
 
 
 [travis]
@@ -120,6 +121,7 @@ commands =
 
 [testenv:pyup]
 basepython = python3.6
+skip_install = true
 
 ignore_errors = true
 changedir={toxinidir}
