Updated files with 'repo_helper'.

--- a/tox.ini
+++ b/tox.ini
@@ -3,7 +3,7 @@
 [tox]
 envlist = py36, py37, py38, mypy, build
 skip_missing_interpreters = true
-requires = pip >= 19.0.0
+requires = pip>=20.2.1
 isolated_build = true
 
 
@@ -22,7 +22,9 @@ python =
 
 
 [testenv]
-setenv = PYTHONDEVMODE = 1
+setenv =
+	PYTHONDEVMODE = 1
+	PIP_USE_FEATURE=2020-resolver
 commands =
 	python --version
 
@@ -102,21 +104,6 @@ changedir = {toxinidir}
 deps =
 	mypy
 commands = mypy wordle
-
-
-[testenv:bandit]
-basepython = python3.6
-
-ignore_errors = true
-changedir = {toxinidir}
-deps =
-	bandit
-whitelist_externals = /usr/bin/printf
-commands =
-	printf "===== Running Bandit on wordle ====="
-	bandit wordle -r
-	printf "===== Running Bandit on tests ====="
-	bandit tests -r -s B101
 
 
 [testenv:pyup]
