--- a/setup.cfg
+++ b/setup.cfg
@@ -1,19 +1,20 @@
-# coding: utf-8
-# This file is managed by 'repo_helper'. Don't edit it directly.
-
+# This file is managed by 'repo_helper'.
+# You may add new sections, but any changes made to the following sections will be lost:
+#     * metadata
+#     * options
+#     * options.packages.find
+#     * options.entry_points
+#     * mypy
 [metadata]
 name = wordle
+description = Create a wordcloud for a Git repository.
 author = Dominic Davis-Foster
 author_email = dominic@davis-foster.co.uk
 license = GNU Lesser General Public License v3 or later (LGPLv3+)
 keywords =
-
 long_description = file: README.rst
 long_description_content_type = text/x-rst
-platforms =
-    Windows
-    macOS
-    Linux
+platforms = Windows, macOS, Linux
 url = https://github.com/domdfcoding/wordle
 project_urls =
     Documentation = https://wordle.readthedocs.io
@@ -34,17 +35,20 @@ classifiers =
     Topic :: Utilities
     Typing :: Typed
 
-
-
 [options]
 python_requires = >=3.6
 zip_safe = False
 include_package_data = True
 packages = find:
 
-
 [options.packages.find]
 exclude =
     tests
     tests.*
     doc-source
+
+[mypy]
+python_version = 3.6
+ignore_missing_imports = True
+namespace_packages = True
+check_untyped_defs = True
