Updated files with 'repo_helper'.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,16 @@
 ---
 
 language: python
-dist: xenial
+dist: focal
 cache: pip
 python:
   - '3.6'
   - '3.7'
   - '3.8'
 
+arch:
+  - amd64
+  - arm64
 install:
 
   - pip install --upgrade pip
@@ -26,7 +29,21 @@ stages:
 
 
 jobs:
+  allow_failures:
+    - arch: arm64
+
+  exclude:
+    - python: '3.7'
+      arch: arm64
+    - python: '3.8'
+      arch: arm64
+
+
   include:
+    - stage: test
+      dist: bionic
+      python: 3.8
+
     - stage: deploy_pypi
       python: "3.6"
       script: skip
