--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,7 @@ python:
   - '3.6'
   - '3.7'
   - '3.8'
+  - '3.9-dev'
 
 arch:
   - amd64
@@ -36,6 +37,8 @@ jobs:
     - python: '3.7'
       arch: arm64
     - python: '3.8'
+      arch: arm64
+    - python: '3.9-dev'
       arch: arm64
 
 
