--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,32 @@
-# This file is managed by 'repo_helper'. Don't edit it directly.
+# This file is managed by 'repo_helper'.
+# You may add new sections, but any changes made to the following sections will be lost:
+#     * tox
+#     * envlists
+#     * travis
+#     * gh-actions
+#     * testenv
+#     * testenv:docs
+#     * testenv:build
+#     * testenv:lint
+#     * testenv:yapf
+#     * testenv:mypy
+#     * testenv:pyup
+#     * testenv:coverage
+#     * flake8
+#     * coverage:run
+#     * coverage:report
+#     * check-wheel-contents
+#     * pytest
 
 [tox]
 envlist = py36, py37, py38, mypy, build
-skip_missing_interpreters = true
+skip_missing_interpreters = True
 requires = pip>=20.2.1
-isolated_build = true
+isolated_build = True
 
+[envlists]
+test = py36, py37, py38
+qa = mypy, lint
 
 [travis]
 python =
@@ -13,21 +34,17 @@ python =
     3.7: py37, build
     3.8: py38, build
 
-
 [gh-actions]
 python =
     3.6: py36, build
     3.7: py37, build
     3.8: py38, build
 
-
 [testenv]
 setenv =
+    PIP_USE_FEATURE = 2020-resolver
     PYTHONDEVMODE = 1
-    PIP_USE_FEATURE=2020-resolver
-    PYTEST_ADDOPTS = --color yes
-commands =
-    python --version
+commands = python --version
 
 [testenv:docs]
 setenv = SHOW_TODOS = 1
@@ -38,15 +55,8 @@ deps =
     -r{toxinidir}/doc-source/requirements.txt
 commands = sphinx-build -M html . ./build {posargs}
 
-
-[testenv:bumpversion]
-skip_install = true
-deps = bump2version
-commands = bumpversion --verbose {posargs}
-
-
 [testenv:build]
-skip_install = true
+skip_install = True
 changedir = {toxinidir}
 deps =
     twine
@@ -57,14 +67,12 @@ commands =
     twine check dist/*
     check-wheel-contents dist/
 
-
 [testenv:lint]
 basepython = python3.6
 changedir = {toxinidir}
-ignore_errors = true
-skip_install = true
+ignore_errors = True
+skip_install = True
 deps =
-    autopep8 >=1.5.2
     flake8 >=3.8.2
     flake8-2020 >= 1.6.0
     flake8_strftime
@@ -79,57 +87,30 @@ deps =
     git+https://github.com/domdfcoding/flake8-quotes.git
 commands = flake8 wordle
 
-
 [testenv:yapf]
 basepython = python3.7
 changedir = {toxinidir}
-skip_install = true
-ignore_errors = true
+skip_install = True
+ignore_errors = True
 deps = yapf
 commands = yapf -i --recursive wordle
 
-
-[testenv:isort]
-basepython = python3.6
-skip_install = true
-ignore_errors = true
-changedir = {toxinidir}
-deps = isort >=5.1.4
-commands = isort wordle
-
-
-
 [testenv:mypy]
 basepython = python3.6
-
-ignore_errors = true
+ignore_errors = True
 changedir = {toxinidir}
 deps =
-	mypy==0.782
-	lxml
+    mypy==0.790
+    lxml
 commands = mypy wordle {posargs}
-
-
 
 [testenv:pyup]
 basepython = python3.6
-skip_install = true
-
-ignore_errors = true
-changedir={toxinidir}
+skip_install = True
+ignore_errors = True
+changedir = {toxinidir}
 deps = pyupgrade-directories
 commands = pyup_dirs wordle --py36-plus --recursive
-
-
-[testenv:qa]
-basepython = python3.6
-skip_install = True
-ignore_errors = true
-whitelist_externals = tox
-changedir = {toxinidir}
-commands = tox -e pyup,isort,yapf,mypy,lint {posargs}
-
-
 
 [flake8]
 max-line-length = 120
@@ -172,23 +153,17 @@ rst-directives =
     rst:directive:option
     rst:role
     pre-commit-shield
-per-file-ignores =
-    tests/*: D100 D101 D102 D103 D104 D106 D201 D204 D207 D208 D209 D210 D211 D212 D213 D214 D215 D300 D301 D400 D402 D403 D404 D415 D417 DALL000
+per-file-ignores = tests/*: D100 D101 D102 D103 D104 D106 D201 D204 D207 D208 D209 D210 D211 D212 D213 D214 D215 D300 D301 D400 D402 D403 D404 D415 D417 DALL000
 pytest-parametrize-names-type = csv
 inline-quotes = "
 multiline-quotes = """
 docstring-quotes = """
 
-
-
 [coverage:run]
-plugins =
-    coverage_pyver_pragma
-
+plugins = coverage_pyver_pragma
 
 [coverage:report]
 exclude_lines =
-    (pragma|PRAGMA)[:\s]?\s*(no|NO)\s*(cover|COVER)
     raise AssertionError
     raise NotImplementedError
     if 0:
@@ -201,3 +176,31 @@ exclude_lines =
 ignore = W002
 toplevel = wordle
 package = wordle
+
+[pytest]
+addopts = --color yes --durations 25
+timeout = 300
+
+[testenv:bumpversion]
+skip_install = true
+deps = bump2version
+commands = bumpversion --verbose {posargs}
+
+
+[testenv:isort]
+basepython = python3.6
+skip_install = true
+ignore_errors = true
+changedir = {toxinidir}
+deps = isort >=5.1.4
+commands = isort wordle
+
+
+
+[testenv:qa]
+basepython = python3.6
+skip_install = True
+ignore_errors = true
+whitelist_externals = tox
+changedir = {toxinidir}
+commands = tox -e pyup,isort,yapf,mypy,lint {posargs}
