--- a/.github/workflows/python_ci_macos.yml
+++ b/.github/workflows/python_ci_macos.yml
@@ -12,12 +12,12 @@ jobs:
     name: "Python ${{ matrix.python-version }}"
     runs-on: "macos-latest"
     env:
-      USING_COVERAGE: '3.6,3.7,3.8,3.9'
+      USING_COVERAGE: '3.6,3.7,3.8'
 
     strategy:
       fail-fast: False
       matrix:
-        python-version: ["3.6","3.7","3.8","3.9"]
+        python-version: ["3.6","3.7","3.8"]
 
 
     steps:
