--- a/tox.ini
+++ b/tox.ini
@@ -19,13 +19,13 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, mypy, build
+envlist = py36, py37, py38, mypy, build
 skip_missing_interpreters = True
 requires = pip>=20.2.1
 isolated_build = True
 
 [envlists]
-test = py36, py37, py38, py39
+test = py36, py37, py38
 qa = mypy, lint
 
 [travis]
@@ -33,14 +33,12 @@ python =
     3.6: py36, build, mypy
     3.7: py37, build
     3.8: py38, build
-    3.9: py39, build
 
 [gh-actions]
 python =
     3.6: py36, build
     3.7: py37, build
     3.8: py38, build
-    3.9: py39, build
 
 [testenv]
 setenv =
