--- a/tox.ini
+++ b/tox.ini
@@ -59,9 +59,9 @@ commands = sphinx-build -M html . ./build {posargs}
 skip_install = True
 changedir = {toxinidir}
 deps =
-    twine
-    pep517
-    check-wheel-contents
+    twine>=3.2.0
+    pep517>=0.9.1
+    check-wheel-contents>=0.1.0
 commands =
     python -m pep517.build --source --binary "{toxinidir}"
     twine check dist/*
