--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@
 #     * options
 #     * options.packages.find
 #     * mypy
+#     * options.entry_points
 
 [metadata]
 name = wordle
@@ -29,6 +30,7 @@ classifiers =
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     Programming Language :: Python :: Implementation :: CPython
     Topic :: Software Development :: Libraries :: Python Modules
     Topic :: Utilities
