Updated docs and examples.

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -13,6 +13,14 @@ lines_between_types = 0
 use_parentheses = True
 default_section = THIRDPARTY
 ;no_lines_before=LOCALFOLDER
-known_third_party = dulwich, github, numpy, pygments, requests, wordcloud
+known_third_party =
+    domdf_python_tools
+    dulwich
+    github
+    matplotlib
+    numpy
+    pygments
+    requests
+    wordcloud
 known_first_party = wordle
 remove_redundant_aliases = True
