--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -4,7 +4,7 @@ author: "Dominic Davis-Foster"
 email: "dominic@davis-foster.co.uk"
 version: "0.1.0"
 username: "domdfcoding"
-license: 'LGPLv3+'
+license: 'MIT'
 short_desc: 'Create a wordcloud for a Git repository.'
 
 enable_tests: False
@@ -18,8 +18,6 @@ python_versions:
   - '3.7'
   - '3.8'
   - '3.9'
-
-# travis secure password for PyPI
 
 classifiers:
   - "Development Status :: 3 - Alpha"
