--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@
 name = wordle
 author = Dominic Davis-Foster
 author_email = dominic@davis-foster.co.uk
-license = GNU Lesser General Public License v3 or later (LGPLv3+)
+license = MIT License
 keywords =
 long_description = file: README.rst
 long_description_content_type = text/x-rst
@@ -23,7 +23,7 @@ project_urls =
 classifiers =
     Development Status :: 3 - Alpha
     Intended Audience :: Developers
-    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
+    License :: OSI Approved :: MIT License
     Operating System :: OS Independent
     Programming Language :: Python
     Programming Language :: Python :: 3 :: Only
