--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 domdf-python-tools>=1.7.0
 dulwich>=0.20.6
-matplotlib>=3.3.3
+matplotlib>=3.2.2; platform_machine != "aarch64" or python_version >= "3.6"
+matplotlib==3.2.2; platform_machine == "aarch64" and python_version == "3.6"
 numpy>=1.19.2
 pygments>=2.7.1
 wordcloud>=1.8.0
