Test on Python 3.10 too.

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,7 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, mypy, build
+envlist = py36, py37, py38, py39, py310-dev, mypy, build
 skip_missing_interpreters = True
 requires =
     pip>=20.3.3
@@ -24,7 +24,7 @@ requires =
 isolated_build = True
 
 [envlists]
-test = py36, py37, py38, py39
+test = py36, py37, py38, py39, py310-dev
 qa = mypy, lint
 
 [testenv]
@@ -77,7 +77,7 @@ deps =
 commands = python3 -m flake8_rst_docstrings_sphinx wordle --allow-toolbox {posargs}
 
 [testenv:mypy]
-basepython = python3.6
+basepython = python3.7
 ignore_errors = True
 changedir = {toxinidir}
 deps =
