--- a/.github/workflows/python_ci_linux.yml
+++ b/.github/workflows/python_ci_linux.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: "ubuntu-20.04"
     continue-on-error: ${{ matrix.config.experimental }}
     env:
-      USING_COVERAGE: '3.6,3.7,3.8,3.9'
+      USING_COVERAGE: '3.6,3.7,3.8,3.9,3.10.0-alpha.3'
 
     strategy:
       fail-fast: False
@@ -23,6 +23,7 @@ jobs:
           - {python-version: "3.7", testenvs: "py37,build", experimental: False}
           - {python-version: "3.8", testenvs: "py38,build", experimental: False}
           - {python-version: "3.9", testenvs: "py39,build", experimental: False}
+          - {python-version: "3.10.0-alpha.3", testenvs: "py310-dev,build", experimental: True}
 
     steps:
       - name: Checkout 🛎️
@@ -39,11 +40,61 @@ jobs:
           python -m site
           python -m pip install --upgrade pip setuptools wheel
           python -m pip install --upgrade tox virtualenv
+          python -m pip install --upgrade coverage_pyver_pragma
 
       - name: "Run Tests for Python ${{ matrix.config.python-version }}"
         run: python -m tox -e "${{ matrix.config.testenvs }}"
 
 
+      - name: "Upload Coverage 🚀"
+        uses: actions/upload-artifact@v2
+        with:
+          name: "coverage-${{ matrix.config.python-version }}"
+          path: .coverage
+
+
+  Coverage:
+    needs: tests
+    runs-on: "ubuntu-20.04"
+    steps:
+      - name: Checkout 🛎️
+        uses: "actions/checkout@v2"
+
+      - name: Setup Python 🐍
+        uses: "actions/setup-python@v2"
+        with:
+          python-version: 3.8
+
+      - name: Install dependencies 🔧
+        run: |
+          python -m pip install --upgrade pip setuptools wheel
+          python -m pip install --upgrade coveralls coverage_pyver_pragma
+
+      - name: "Download Coverage 🪂"
+        uses: actions/download-artifact@v2
+        with:
+          path: coverage
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: coverage
+
+      - name: Combine Coverage 👷
+        run: |
+          shopt -s globstar
+          python -m coverage combine coverage/**/.coverage
+
+      - name: "Upload Combined Coverage Artefact 🚀"
+        uses: actions/upload-artifact@v2
+        with:
+          name: "combined-coverage"
+          path: .coverage
+
+      - name: "Upload Combined Coverage to Coveralls"
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          coveralls
 
   Deploy:
     needs: tests
