--- a/.isort.cfg
+++ b/.isort.cfg
@@ -14,12 +14,18 @@ use_parentheses = True
 default_section = THIRDPARTY
 ;no_lines_before=LOCALFOLDER
 known_third_party =
+    coverage
+    coverage_pyver_pragma
     domdf_python_tools
     dulwich
     github
     matplotlib
     numpy
     pygments
+    pytest
+    pytest_cov
+    pytest_randomly
+    pytest_timeout
     requests
     wordcloud
 known_first_party = wordle
