--- a/tests/test_wordle_/test_github_repo_frequency.yml
+++ b/tests/test_wordle_/test_github_repo_frequency.yml
@@ -20,7 +20,7 @@
 '"3.7"': 1
 '"3.8"': 1
 '"Barry': 1
-'"DISPLAY=:0': 1
+'"DISPLAY': 1
 '"Foo()"': 1
 '"cows")': 1
 '"cpython"': 1
@@ -182,8 +182,8 @@
 --allow-toolbox: 1
 --binary: 1
 --color: 1
+--cov: 2
 --cov-append: 1
---cov=domdf_python_tools: 2
 --durations: 1
 --py36-plus: 2
 --recursive: 1
@@ -279,6 +279,8 @@
 0,: 19
 '0.': 1
 '0.0': 7
+0.0.4: 1
+0.0.6: 1
 '0.000': 4
 '0.000000': 1
 0.000pt>: 1
@@ -287,6 +289,8 @@
 '0.05': 3
 0.096pt>): 1
 '0.1': 4
+0.1.0: 3
+0.1.1: 2
 0.10.0: 5
 0.11.0: 6
 0.12.0: 1
@@ -309,7 +313,7 @@
 0.8.0: 11
 '0.9': 6
 0.9.0: 5
-0.9.1: 2
+0.9.1: 3
 0.9.9: 2
 0123456789: 2
 0``.: 1
@@ -336,19 +340,21 @@
 1.1.0: 3
 1.1.1: 2
 1.1.5: 1
+1.10.0: 1
 '1.2': 17
 1.2.0: 1
 1.2.3.4: 1
-1.3.0: 4
+1.3.0: 5
 1.4.0: 16
 1.4.2: 1
 1.417pt>: 1
 '1.5': 13
-1.5.0: 5
+1.5.0: 6
 1.5.0.2.3.4.5: 1
 1.5.1: 6
 1.5.1.2.3.4.5: 5
 1.5.2: 1
+1.5.3: 1
 1.6.0: 4
 1.7.0: 2
 1.7.1: 2
@@ -485,10 +491,13 @@
 '2.3': 2
 2.3.0: 1
 '2.5': 4
+2.7.1: 1
 '2.83464566929': 7
 2.835pt>: 1
 '20': 45
 20,: 1
+20.10.0: 1
+20.3.3: 1
 '200': 11
 '2000': 2
 '2001': 1
@@ -574,6 +583,7 @@
 '3.10': 1
 3.10-dev: 1
 3.10.0-alpha.3: 1
+3.2.0: 1
 '3.4': 5
 '3.5': 2
 '3.6': 11
@@ -583,6 +593,7 @@
 '3.7': 11
 '3.8': 11
 3.8's: 1
+3.8.2: 1
 '3.9': 5
 '30': 5
 30,: 1
@@ -658,7 +669,7 @@
 '487': 1
 49,: 1
 4]]: 1
-'5': 283
+'5': 284
 5': 2
 5),: 8
 5,: 25
@@ -788,6 +799,7 @@
 99,: 1
 9],: 2
 9am: 2
+:0: 1
 :None: 1
 :__pkginfo__: 1
 :align: 1
@@ -1008,9 +1020,9 @@
 <tests.test_bases.Person: 1
 <tests.test_utils.NoRepr: 2
 =%r: 1
+=0.790: 1
 '>=2019.1': 1
 '>=3.6.1': 1
-'>=3.8.2': 1
 '@abstractmethod': 2
 '@classmethod': 9
 '@contextlib': 1
@@ -4233,7 +4245,7 @@ check-symlinks: 1
 check-toml: 1
 check-vcs-permalinks: 1
 check-wheel-contents: 1
-check-wheel-contents>=0.1.0: 1
+check-wheel-contents>: 1
 check-yaml: 1
 check_circular: 1
 check_date: 18
@@ -4928,10 +4940,10 @@ cove: 1
 cover: 1
 coverage: 4
 coverage-pyver-pragma>=0.0.6: 1
-coverage>=5: 1
+coverage>: 1
 coverage>=5.1: 1
 coverage_pyver_pragma: 2
-coverage_pyver_pragma>=0.0.6: 1
+coverage_pyver_pragma>: 1
 covered: 1
 covering: 1
 covers: 1
@@ -5602,7 +5614,7 @@ dom: 1
 domain: 1
 domains: 1
 domdf-sphinx-theme>=0.3.0: 1
-domdf_python_tools: 122
+domdf_python_tools: 124
 domdf_python_tools.__docs: 1
 domdf_python_tools.bases: 1
 domdf_python_tools.bases.Dictable: 1
@@ -6582,15 +6594,15 @@ flag: 5
 flags: 3
 flake8: 3
 flake8-2020: 1
-flake8-builtins>=1.5.3: 1
-flake8-docstrings>=1.5.0: 1
-flake8-dunder-all>=0.1.1: 1
-flake8-github-actions>=0.1.0: 1
-flake8-pyi>=20.10.0: 1
-flake8-pytest-style>=1.3.0: 1
-flake8-sphinx-links>=0.0.4: 1
-flake8-strftime>=0.1.1: 1
-flake8-typing-imports>=1.10.0: 1
+flake8-builtins>: 1
+flake8-docstrings>: 1
+flake8-dunder-all>: 1
+flake8-github-actions>: 1
+flake8-pyi>: 1
+flake8-pytest-style>: 1
+flake8-sphinx-links>: 1
+flake8-strftime>: 1
+flake8-typing-imports>: 1
 flake8.extension: 1
 flake8>=3.8.4: 1
 flake8_rst_docstrings_sphinx: 1
@@ -9434,9 +9446,8 @@ myanmar: 1
 myers: 1
 myfunc: 2
 mylist: 2
-mypy: 10
+mypy: 11
 mypy,: 2
-mypy==0.790: 1
 mypy_deps: 1
 myrtle: 1
 myself: 1
@@ -10271,7 +10282,7 @@ pentium: 1
 people: 1
 peoples: 1
 pep517.build: 1
-pep517>=0.9.1: 1
+pep517>: 1
 pepper: 1
 per: 2
 per-file-ignores: 1
@@ -10415,7 +10426,7 @@ pink: 1
 pins: 1
 pioneer: 1
 pip: 7
-pip>=20.3.3: 1
+pip>: 1
 pipe: 1
 pipeline: 1
 pipes: 1
@@ -10957,7 +10968,7 @@ pybool: 1
 pydash: 3
 pydash>=4.7.4: 1
 pydict: 1
-pygments>=2.7.1: 1
+pygments>: 1
 pygments_style: 1
 pypi: 1
 pypy-3.6: 1
@@ -13651,7 +13662,7 @@ town: 1
 towns: 1
 township: 1
 tox: 15
-tox-envlist>=0.1.0: 1
+tox-envlist>: 1
 tox_testenv_extras: 1
 tox_unmanaged: 1
 toxic: 1
@@ -13861,7 +13872,7 @@ twice: 1
 twiki: 1
 twin: 1
 twine: 1
-twine>=3.2.0: 1
+twine>: 1
 twins: 1
 twist: 1
 twisted: 1
