--- a/tox.ini
+++ b/tox.ini
@@ -21,6 +21,7 @@ skip_missing_interpreters = True
 requires =
     pip>=20.3.3
     tox-envlist>=0.1.0
+    tox-pip-version>=0.0.7
 isolated_build = True
 
 [envlists]
