--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,7 @@ dulwich>=0.20.6
 matplotlib>=3.2.2; platform_machine != "aarch64" or python_version > "3.6"
 matplotlib==3.2.2; platform_machine == "aarch64" and python_version == "3.6"
 numpy>=1.19.2; platform_system != "Windows"
-numpy!=1.19.4,<1.20,>=1.19.3; platform_system == "Windows"
+numpy!=1.19.4,>=1.19.3; platform_system == "Windows"
 pygments>=2.7.4
 southwark>=0.8.0
 wordcloud>=1.8.0
