Update copyright years.

--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -1,5 +1,5 @@
 modname: wordle
-copyright_years: "2020"
+copyright_years: "2020-2021"
 author: "Dominic Davis-Foster"
 email: "dominic@davis-foster.co.uk"
 version: "0.2.1"
