--- a/repo_helper.yml
+++ b/repo_helper.yml
@@ -8,8 +8,9 @@ license: 'MIT'
 short_desc: 'Create a wordcloud for a Git repository.'
 
 enable_conda: False
-
 python_deploy_version: 3.7
+min_coverage: 95
+use_whey: True
 
 # Versions to run tests for
 python_versions:
@@ -31,5 +32,3 @@ imgbot_ignore:
 
 tox_requirements:
   - "tox-pip-version>=0.0.7"
-
-min_coverage: 95
