--- a/tox.ini
+++ b/tox.ini
@@ -49,9 +49,9 @@ commands = sphinx-build -M html . ./build {posargs}
 skip_install = True
 changedir = {toxinidir}
 deps =
-    twine>=3.2.0
-    pep517>=0.9.1
+    build[virtualenv]>=0.3.1
     check-wheel-contents>=0.1.0
+    twine>=3.2.0
 commands =
     python -m pep517.build --source --binary "{toxinidir}"
     twine check dist/*.tar.gz dist/*.whl
