Split tests for pillow 8.1 and 8.2

--- a/tox.ini
+++ b/tox.ini
@@ -16,7 +16,14 @@
 #     * pytest
 
 [tox]
-envlist = py36, py37, py38, py39, py310-dev, mypy, build
+envlist =
+    py36-pillow{8.1,8.2}
+    py37-pillow{8.1,8.2}
+    py38-pillow{8.1,8.2}
+    py39-pillow{8.1,8.2}
+    py310-dev-pillow{8.1,8.2}
+    mypy
+    build
 skip_missing_interpreters = True
 isolated_build = True
 requires =
@@ -25,13 +32,21 @@ requires =
     tox-pip-version>=0.0.7
 
 [envlists]
-test = py36, py37, py38, py39, py310-dev
+test =
+    py36-pillow{8.1,8.2}
+    py37-pillow{8.1,8.2}
+    py38-pillow{8.1,8.2}
+    py39-pillow{8.1,8.2}
+    py310-dev-pillow{8.1,8.2}
 qa = mypy, lint
-cov = py36, coverage
+cov = py37-pillow8.1, coverage
 
 [testenv]
 setenv = PYTHONDEVMODE = 1
-deps = -r{toxinidir}/tests/requirements.txt
+deps =
+    -r{toxinidir}/tests/requirements.txt
+    pillow8.1: pillow~=8.1.0
+    pillow8.2: pillow~=8.2.0
 commands =
     python --version
     python -m pytest --cov=wordle -r aR tests/ {posargs}
@@ -160,7 +175,7 @@ package = wordle
 addopts = --color yes --durations 25
 timeout = 300
 
-[testenv:py310-dev]
+[testenv:py310-dev-pillow{8.1,8.2}]
 setenv = PYTHONDEVMODE = 1
 pip_version = pip>=20.3.3
 deps =
