--- a/tox.ini
+++ b/tox.ini
@@ -17,11 +17,12 @@
 
 [tox]
 envlist =
-    py36-pillow{8.1,8.2}
-    py37-pillow{8.1,8.2}
-    py38-pillow{8.1,8.2}
-    py39-pillow{8.1,8.2}
-    py310-dev-pillow{8.1,8.2}
+    py36-pillow{8.1,8.2,8.3,8.4}
+    py37-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py38-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py39-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py310-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py311-dev-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
     mypy
     build
 skip_missing_interpreters = True
@@ -33,20 +34,29 @@ requires =
 
 [envlists]
 test =
-    py36-pillow{8.1,8.2}
-    py37-pillow{8.1,8.2}
-    py38-pillow{8.1,8.2}
-    py39-pillow{8.1,8.2}
-    py310-dev-pillow{8.1,8.2}
+    py36-pillow{8.1,8.2,8.3,8.4}
+    py37-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py38-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py39-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py310-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
+    py311-dev-pillow{8.1,8.2,8.3,8.4,9.0,9.1,9.2}
 qa = mypy, lint
 cov = py37-pillow8.1, coverage
 
 [testenv]
-setenv = PYTHONDEVMODE = 1
+setenv =
+    PYTHONDEVMODE=1
+    PIP_DISABLE_PIP_VERSION_CHECK=1
+    SETUPTOOLS_USE_DISTUTILS=stdlib
 deps =
     -r{toxinidir}/tests/requirements.txt
     pillow8.1: pillow~=8.1.0
     pillow8.2: pillow~=8.2.0
+    pillow8.3: pillow~=8.3.0
+    pillow8.4: pillow~=8.4.0
+    pillow9.0: pillow~=9.0.0
+    pillow9.1: pillow~=9.1.0
+    pillow9.2: pillow~=9.2.0
 commands =
     python --version
     python -m pytest --cov=wordle -r aR tests/ {posargs}
