--- a/tests/test_wordle_/test_github_repo_frequency_82_.yml
+++ b/tests/test_wordle_/test_github_repo_frequency_82_.yml
@@ -27,9 +27,10 @@
 '"https://manpages.debian.org/{path}"': 1
 '"rm': 1
 '"setuptools.build_meta"': 1
+'"setuptools>=40.6.0"': 1
 '"stylesheet"': 1
 '"text/css"': 1
-'"wheel>=0.34.2"]': 1
+'"wheel>=0.34.2"': 1
 '"{toxinidir}"': 1
 '%H:%M:%S': 1
 '%d': 2
@@ -2091,7 +2092,6 @@ You: 2
 ZYXWVUTSRQPONMLKJIHGFEDCBA: 1
 ZeroDivisionError: 1
 Zip`: 1
-'["setuptools>=40.6.0",': 1
 '[(1,': 2
 '[(170.0,': 2
 '[(5,': 1
