Cap wordcloud and pillow

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -127,6 +127,9 @@ show_error_codes = true
 [tool.snippet-fmt]
 directives = [ "code-block",]
 
+[tool.dep_checker]
+allowed_unused = [ "pillow",]
+
 [tool.dependency-dash."requirements.txt"]
 order = 10
 
